fixed z-index bug for Triangles

--- a/src/app/hero/hero.component.sass
+++ b/src/app/hero/hero.component.sass
@@ -18,9 +18,6 @@
     background-position: center center
     background-size: cover
 
-    position: relative
-    z-index: $z-base
-
   &__headline
     align-self: center
 
@@ -36,6 +33,3 @@
 
     &--italic
       font-style: italic
-
-.test
-  font-size: 20px
