--- a/src/assets/sass/_spacing.sass
+++ b/src/assets/sass/_spacing.sass
@@ -13,7 +13,6 @@ $margin: 2.5rem
 //--------------------
 //  Z-index
 //--------------------
-$z-base: -9
-$z-triangles: -1
+$z-triangles: 1
 $z-content: 9
 $z-navigation: 99
