--- a/src/styles.sass
+++ b/src/styles.sass
@@ -38,6 +38,10 @@
     padding-left: 2rem
     padding-right: 2rem
 
+  > *
+    position: relative
+    z-index: $z-content
+
   &__title
     color: $primary
     font-size: $title-size
